Asegurar autenticacion: verificacion por correo y secretos fuera del repo
- Deja de rastrear .env y lo ignora (los secretos pasan a variables de entorno)
- Externaliza el secreto JWT y anade uid/roles como claims
- Anade verificacion de cuenta por correo (VerificationToken + EmailService)
- Bloquea el login de cuentas inactivas o no verificadas
- Cierra /user/{id} y restringe el registro a los roles cliente y proveedor
- Repara el envio del correo de recuperacion de contrasena
- Elimina CorsConfig duplicado y convierte lambdas a estilo imperativo

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>